added footer & nav position & 3 side by side articles

--- a/index.html
+++ b/index.html
@@ -49,7 +49,33 @@
         <img src="assets/article-two.png" alt="placeholder">
         <p>Lemon drops tiramisu sesame snaps oat cake marshmallow sugar plum liquorice. Tootsie roll pastry cake gummi bears pastry toffee tootsie roll candy. Pastry sesame snaps wafer liquorice. Gummies macaroon tiramisu jelly beans soufflé brownie ...</p>
       </section>
+    <div class="three-articles">
+      <section>
+        <h4 class="article-title">Tesla's "Dojo"</h4>
+        <img src="assets/dojo.png" width="200" height="132" alt="dojo">
+        <p>Lemon drops tiramisu sesame snaps oat cake marshmallow sugar plum liquorice. Tootsie roll pastry cake gummi bears pastry toffee tootsie roll candy. Pastry sesame snaps wafer liquorice. Gummies macaroon tiramisu jelly beans soufflé brownie ...</p>
+      </section>
+      <section>
+        <h4 class="article-title">TeslaBot</h4>
+        <img src="assets/teslabot.png" width="200" height="132" alt="teslabot">
+        <p>Lemon drops tiramisu sesame snaps oat cake marshmallow sugar plum liquorice. Tootsie roll pastry cake gummi bears pastry toffee tootsie roll candy. Pastry sesame snaps wafer liquorice. Gummies macaroon tiramisu jelly beans soufflé brownie ...</p>
+      </section>
+      <section>
+        <h4 class="article-title">TeslaBot</h4>
+        <img src="assets/teslabot.png" width="200" height="132" alt="teslabot">
+        <p>Lemon drops tiramisu sesame snaps oat cake marshmallow sugar plum liquorice. Tootsie roll pastry cake gummi bears pastry toffee tootsie roll candy. Pastry sesame snaps wafer liquorice. Gummies macaroon tiramisu jelly beans soufflé brownie ...</p>
+      </section>
+    </div>
     </div>
   </div>
 </body>
+<foot>
+  <nav class="footer">
+    <ul>
+      <li><a href="#">Hacker Times Careers</a></li>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Citations & Sources</a></li>
+    </ul>
+  </nav>
+</foot>
 </html>
