deleted text in footer

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <foot>
   <nav class="footer">
     <ul>
-      <li><a href="#">Hacker Times Careers</a></li>
+      <li><a href="#">Careers</a></li>
       <li><a href="#">About Us</a></li>
       <li><a href="#">Citations & Sources</a></li>
     </ul>
